--- a/views/verify/index.html
+++ b/views/verify/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/output.css">
+    <link rel="stylesheet" href="/styles/output.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <title>Verificar Correo</title>
+    <title>Verificar</title>
 </head>
 <body>
     <div class="flex items-center justify-center h-screen">
